# fake_news_detection

./: .env.example  DEPLOYMENT.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: LandingPage.js  NewsChecker.js
frontend/src/utils/: api.js
